[package]
name = "vault_program"
version = "1.0.0"
description = "Vault Program"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
pyth-sdk-solana = "0.9.0"
solana-program = "1.17.10"
spl-token = { version = "3.3.0", features=["no-entrypoint"] }
vault-sdk = { path = "../sdk" }
static_assertions = "1.1.0"
bytemuck = "1.5.1"
ahash = "=0.8.4"

[dev-dependencies]
assert_matches = "1.5.0"
bytemuck = "1.5.1"
base64 = "0.13"
log = "0.4.14"
proptest = "1.0"
solana-program-test = "1.16.27"
solana-sdk = "1.16.27"
serde = "1.0.140"
serde_yaml = "0.8"
thiserror = "1.0"
bincode = "1.3.3"
borsh = "0.9.3"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_program"
