[package]
name = "vault-sdk"
version = "1.0.0"
description = "Vault Sdk"
edition = "2021"

[dependencies]
arrayref = "0.3.6"
bytemuck = "1.5.1"
num-derive = "0.3"
num-traits = "0.2"
pyth-sdk-solana = "0.9.0"
solana-program = "1.16.27"
spl-token = { version = "3.2.0", features=["no-entrypoint"] }
static_assertions = "1.1.0"
thiserror = "1.0"
uint = "0.9.1"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13"
log = "0.4.14"
proptest = "1.0"
solana-sdk = "1.16.27"
serde = "1.0.140"
serde_yaml = "0.8"
rand = "0.8.5"


[lib]
crate-type = ["cdylib", "lib"]
